<resources>
    <string name="app_name">Aula+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aula_home">Aula+ (Home)</string>
    <string name="nightmode">🌙</string>
    <string name="t_tulo_del_aviso">Título del aviso</string>
    <string name="contenthint">Materia (DI, SI, DWES…)</string>
    <string name="a_adir_aviso">Añadir aviso</string>
    <string name="borrar_ltimo">Borrar último</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="aviso_hint">Crea un aviso para que se muestre aquí</string>
    <string name="titulo">Aula+ — Login</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="aula_registro">Aula+ — Registro</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ya_tengo_cuenta">Ya tengo cuenta</string>
    <string name="darkmode">darkmode</string>
    <string name="perfil">Perfil</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="alias">Alias</string>
    <string name="alias_del_usuario">Alias del usuario:</string>
</resources>